zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__rename_terminal_pane_plugin_command.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
expression: "format!(\"{:#?}\", new_tab_event)"
---
Some(
    RenamePane(
        Terminal(
            1,
        ),
        [
            110,
            101,
            119,
            32,
            116,
            101,
            114,
            109,
            105,
            110,
            97,
            108,
            95,
            112,
            97,
            110,
            101,
            95,
            110,
            97,
            109,
            101,
        ],
        Some(
            NotificationEnd {
                channel: None,
                resolution: None,
                exit_status: None,
                unblock_condition: None,
                affected_pane_id: None,
                affected_tab_id: None,
                error_message: None,
                stdout_message: None,
            },
        ),
    ),
)
