zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__run_action_plugin_command.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
expression: "format!(\"{:#?}\", move_focus_instruction)"
---
Some(
    (
        1,
        Some(
            NotificationEnd {
                channel: None,
                resolution: None,
                exit_status: None,
                unblock_condition: None,
                affected_pane_id: None,
                affected_tab_id: None,
                error_message: None,
                stdout_message: None,
            },
        ),
    ),
)
